<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/newPostContainer"
    android:transitionGroup="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iconClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/materialBlack"
            android:textSize="17sp"
            android:text="@string/addTaskHeader" />

        <ImageView
            android:id="@+id/iconDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_done" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlHeader"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/dividerIn" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:hint="@string/addTaskHint"
        android:inputType="textCapSentences"
        android:padding="15dp"
        android:textColor="@color/materialBlack"
        android:textColorHint="@color/materialGray"
        android:textSize="22sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/rlExtra"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/dividerIn" />

    <RelativeLayout
        android:id="@+id/rlExtra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            style="@style/AddTaskButton"
            android:id="@+id/dateToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/today"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/AddTaskButton"
            android:id="@+id/dateTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dateToday"
            android:layout_marginStart="10dp"
            android:text="@string/tomorrow"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AddTaskButton"
            android:id="@+id/dateOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/other"/>

    </RelativeLayout>

</RelativeLayout>